--- a/src/app/theme/pages/default/perfil/cuenta/cuenta.component.html
+++ b/src/app/theme/pages/default/perfil/cuenta/cuenta.component.html
@@ -112,7 +112,7 @@
         </div>
         <div class="form-group m-form__group row">
             <label class="col-lg-2 col-form-label">
-                Ciudad
+                Ciudad Principal
             </label>
             <div class="col-lg-3">
                 <select  class="form-control m-input" placeholder="Ciudad"
@@ -123,7 +123,7 @@
                 </select>
             </div>
                 <label class="col-lg-2 col-form-label" >
-                  Parroquía:
+                    Ciudad Secundaria y Parroquía
               </label>
               <div class="col-lg-3">
                   <select class="form-control m-input" placeholder="Parroquía"
