--- a/src/app/theme/pages/default/mi-casillero/instrucciones-datatable/instrucciones-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/instrucciones-datatable/instrucciones-datatable.component.html
@@ -100,12 +100,12 @@
         <td>
         <div class="row">
             <div class="col-md-1">
-            <i class="fa fa-edit m--font-info" *ngIf="articulo.entrega && !articulo.guia_enviada " title="Editar Entrega" style="cursor: pointer;" (click)="View(editarModal,articulo.entrega.id,0)"></i>
+            <i class="fa fa-edit m--font-info" *ngIf="articulo.entrega && !articulo.entrega.guia_enviada && !articulo.entrega.editar" title="Editar Entrega" style="cursor: pointer;" (click)="View(editarModal,articulo.entrega.id,0)"></i>
             </div>
             <div class="col-md-1">
-            <i class="fa fa-eye m--font-info" *ngIf="articulo.entrega && !articulo.editar" title="Visualizar Entrega" style="cursor: pointer;" (click)="View(detallesModal,articulo.entrega.id,1)"></i>
+            <i class="fa fa-eye m--font-info" *ngIf="articulo.entrega" title="Visualizar Entrega" style="cursor: pointer;" (click)="View(detallesModal,articulo.entrega.id,1)"></i>
             </div>
-            <div class="col-md-1" *ngIf="articulo.entrega && !articulo.guia_enviada && !articulo.editar">
+            <div class="col-md-1" *ngIf="articulo.entrega && !articulo.entrega.guia_enviada && !articulo.entrega.editar">
                 <i class="fa fa-trash m--font-danger" title="Eliminar" style="cursor: pointer"
                    (click)="onDelete(deleteConfirmation,articulo.entrega.id)"></i>
             </div>
