--- a/src/app/theme/pages/default/mi-casillero/en-bodega-list-header/en-bodega-list-header.component.html
+++ b/src/app/theme/pages/default/mi-casillero/en-bodega-list-header/en-bodega-list-header.component.html
@@ -20,7 +20,7 @@
             <i class="fa fa-dropbox"></i>
             Consolidar
         </button>
-        <button [disabled]="retirarPaquete || totalEnBodega != 1" class="btn btn-warning m-btn m-btn--icon m-btn--air m-btn--custom"
+        <button [disabled]="retirarPaquete || totalEnBodega < 1" class="btn btn-warning m-btn m-btn--icon m-btn--air m-btn--custom"
                 (click)="onRetirar()" style="font-size: 1.2rem;" >
             <i class="fa fa-dollar"></i>
             Servicio Bodega
