--- a/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
+++ b/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
@@ -1515,7 +1515,7 @@
                                         >
                                         <option [value]="1"> Retiro
                                         </option>
-                                        <option [value]="2"> Cargo Release
+                                        <option [value]="2"> Bajar Peso - Separación
                                         </option>
                                 </select>
                             </div>
